10/main.css
body {
	margin: 0;
	font-family: monospace;
}
body.loading:before {
	content: '';
	display: block;
	position: fixed;
	background: white;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 1;
	opacity: 0.4;
	-webkit-transition: opacity 200ms ease-out;
	-moz-transition: opacity 200ms ease-out;
	-o-transition: opacity 200ms ease-out;
	transition: opacity 200ms ease-out;
}
body.loading:after {
	-webkit-animation: spin 0.7s linear infinite;
					animation: spin 0.7s linear infinite;
	border: 1px solid rgba(0,0,0,0.2);
	border-top-color: rgba(0,0,0,0.9);
	border-radius: 100%;
	content: '';
	display: block;
	position: fixed;
	top: 50%;
	left: 50%;
	margin: -20px 0 0 -20px;
	width: 40px;
	height: 40px;
}
@-webkit-keyframes spin {
	0% {
		-webkit-transform: rotate(0deg);
						transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
						transform: rotate(360deg);
	}
}
@keyframes spin {
	0% {
		-webkit-transform: rotate(0deg);
						transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
						transform: rotate(360deg);
	}
}

.menu {
	position: fixed;
	left: 20px;
	top: 20px;
	background: rgba(108, 232, 195, 0.65);
	min-width: 800px;
	text-transform: uppercase;
	padding: 10px 20px;
	font-size: 1.2em;
	z-index: 2;
	box-sizing: border-box;
	border-radius: 3px;
}
.menu .entry {
	height: 30px;
	line-height: 30px;
}
.menu .entry .name {
	display: inline;
}
.menu .entry input[type='checkbox'] {
	/*-webkit-appearance: none;*/
	/*background: rgba(255, 255, 255, 0.7);
	height: 16px;
	width: 16px;
	margin: 0;
	margin-bottom: -3px;
	display: inline-block;
	position: relative;
	border-radius: 3px;
	cursor: pointer;*/
}
/*.menu .entry input[type='checkbox']:checked + label {
	background: rgba(255, 255, 255, 0.7);
}*/
.menu .entry input[type='range'] {
	float: right;
	-webkit-appearance: none;
	width: 70%;
	margin: 0;
	background: rgba(255, 255, 255, 0.7);
	border-radius: 3px;
}
.menu .entry input[type=range]::-webkit-slider-thumb {
	-webkit-appearance: none;
	height: 20px;
	width: 16px;
	background: rgba(53, 53, 53, 1);
	cursor: pointer;
	border-radius: 3px;
}
.menu .entry input[type=range]::-moz-range-thumb {
	-webkit-appearance: none;
	height: 20px;
	width: 16px;
	background: rgba(53, 53, 53, 1);
	cursor: pointer;
	margin-top: -14px;
	border-radius: 3px;
}
.menu .entry input[type=range]:focus,
.menu .entry input[type='checkbox'] {
	outline: none;
}
.menu .entry span {
	margin-left: 10px;
	font-weight: bold;
}
.browser-dev-info {
	position: fixed;
	font-size: 0.8em;
	right: 0;
	color: #656565;
}
#clicklayer {
	position: absolute;
}
.tile-info {
	position: fixed;
	background: rgba(108, 232, 195, 0.65);
	top: 220px;
	left: 20px;
	text-transform: uppercase;
	font-size: 1.2em;
	z-index: 2;
	box-sizing: border-box;
	border-radius: 3px;
}
.tile-info .inner {
	padding: 10px 20px;
}

@media (min-width: 0) and (max-width: 881px) {
	.menu {
		min-width: calc(100% - 40px);
	}
	.menu .entry input[type='range'] {
		width: 100%;
	}
}

